Fix null ref risk on string.